crates/bonsaidb-macros/tests/ui/view/missing_key.stderr
error: required `key` is not specified

       = help: try `#[view(key = KeyType)]`
 --> tests/ui/view/missing_key.rs:3:10
  |
3 | #[derive(View)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `View` (in Nightly builds, run with -Z macro-backtrace for more info)
